fixed the send button on mobile, and updated some styling

--- a/public/main.css
+++ b/public/main.css
@@ -165,7 +165,7 @@ svg:not(#faces):not(#animals):not(#food):not(#sport):not(#transport):not(#object
     }
     #userpane {
       width: 100vw;
-      height: 10vh;
+      height: 12vh;
     }
     #users {
         display: none;
@@ -196,15 +196,14 @@ svg:not(#faces):not(#animals):not(#food):not(#sport):not(#transport):not(#object
       position: fixed;
       left: 0px;
       bottom: 0px;
-      background: lightgray;
+      background: rgba(211, 211, 211, 0.801);
     }
 
     #send-icon {
       top: 4.5vh;
-      left: 20vw;
+      right: 1vw;
       height: 40px;
       width: 15vw;
-    
     }
   
     #messageslist {
@@ -216,9 +215,13 @@ svg:not(#faces):not(#animals):not(#food):not(#sport):not(#transport):not(#object
         width: 160px;
         height: 50px;
         top: 20px;
-        right: 0px;
+        right: 5px;
         bottom: initial;
         left: initial;
+    }
+
+    #messageslist {
+      word-wrap: break-word;
     }
 
     /* No emoji option for mobile. */
